sync only new arrived products
